load read_parquet,correct the warehouse path,method of MetricsRegistry create